// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`metaEngine ranking snapshots > keeps the complete all ranking stable 1`] = `
[
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 1,
    "redsecTtkMs": 596,
    "roleFit": 88,
    "score": 81,
    "tier": "S",
    "weapon": "VCR-2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 2,
    "redsecTtkMs": 631,
    "roleFit": 88,
    "score": 79,
    "tier": "A",
    "weapon": "M433",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 3,
    "redsecTtkMs": 637,
    "roleFit": 88,
    "score": 79,
    "tier": "A",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 4,
    "redsecTtkMs": 713,
    "roleFit": 88,
    "score": 77,
    "tier": "A",
    "weapon": "KORD 6P67",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 5,
    "redsecTtkMs": 644,
    "roleFit": 84,
    "score": 77,
    "tier": "A",
    "weapon": "M123K",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 6,
    "redsecTtkMs": 656,
    "roleFit": 78,
    "score": 77,
    "tier": "A",
    "weapon": "KV9",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 7,
    "redsecTtkMs": 712,
    "roleFit": 88,
    "score": 76,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 8,
    "redsecTtkMs": 639,
    "roleFit": 86,
    "score": 76,
    "tier": "A",
    "weapon": "M277",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 9,
    "redsecTtkMs": 671,
    "roleFit": 84,
    "score": 76,
    "tier": "A",
    "weapon": "DRS-IAR",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 10,
    "redsecTtkMs": 712,
    "roleFit": 84,
    "score": 75,
    "tier": "A",
    "weapon": "L110",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 11,
    "redsecTtkMs": 709,
    "roleFit": 78,
    "score": 75,
    "tier": "A",
    "weapon": "CZ3A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 12,
    "redsecTtkMs": 736,
    "roleFit": 86,
    "score": 73,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 13,
    "redsecTtkMs": 668,
    "roleFit": 84,
    "score": 73,
    "tier": "A",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 14,
    "redsecTtkMs": 756,
    "roleFit": 84,
    "score": 73,
    "tier": "A",
    "weapon": "M240L",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 15,
    "redsecTtkMs": 715,
    "roleFit": 84,
    "score": 73,
    "tier": "A",
    "weapon": "M121 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 16,
    "redsecTtkMs": 682,
    "roleFit": 78,
    "score": 73,
    "tier": "A",
    "weapon": "SCW-10",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 17,
    "redsecTtkMs": 819,
    "roleFit": 78,
    "score": 72,
    "tier": "A",
    "weapon": "PW7A2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 18,
    "redsecTtkMs": 799,
    "roleFit": 88,
    "score": 71,
    "tier": "B",
    "weapon": "L85A3",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 19,
    "redsecTtkMs": 786,
    "roleFit": 88,
    "score": 71,
    "tier": "B",
    "weapon": "NVO-228E",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 20,
    "redsecTtkMs": 734,
    "roleFit": 86,
    "score": 71,
    "tier": "B",
    "weapon": "SG-553R",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 21,
    "redsecTtkMs": 781,
    "roleFit": 86,
    "score": 71,
    "tier": "B",
    "weapon": "GRT-BC",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 22,
    "redsecTtkMs": 795,
    "roleFit": 78,
    "score": 71,
    "tier": "B",
    "weapon": "USG-90",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 23,
    "redsecTtkMs": 866,
    "roleFit": 84,
    "score": 70,
    "tier": "B",
    "weapon": "M/60",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 24,
    "redsecTtkMs": 810,
    "roleFit": 78,
    "score": 70,
    "tier": "B",
    "weapon": "SGX",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 25,
    "redsecTtkMs": 866,
    "roleFit": 88,
    "score": 69,
    "tier": "B",
    "weapon": "AK4D",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 26,
    "redsecTtkMs": 833,
    "roleFit": 86,
    "score": 69,
    "tier": "B",
    "weapon": "QBZ-192",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 27,
    "redsecTtkMs": 792,
    "roleFit": 86,
    "score": 69,
    "tier": "B",
    "weapon": "M417 A2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 28,
    "redsecTtkMs": 889,
    "roleFit": 88,
    "score": 67,
    "tier": "B",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 29,
    "redsecTtkMs": 859,
    "roleFit": 78,
    "score": 67,
    "tier": "B",
    "weapon": "PW5A3",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 30,
    "redsecTtkMs": 967,
    "roleFit": 84,
    "score": 66,
    "tier": "B",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 31,
    "redsecTtkMs": 862,
    "roleFit": 86,
    "score": 65,
    "tier": "B",
    "weapon": "SOR-300C",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 32,
    "redsecTtkMs": 910,
    "roleFit": 84,
    "score": 65,
    "tier": "B",
    "weapon": "RPKM",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 33,
    "redsecTtkMs": 958,
    "roleFit": 78,
    "score": 63,
    "tier": "B",
    "weapon": "SL9",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 34,
    "redsecTtkMs": 964,
    "roleFit": 86,
    "score": 62,
    "tier": "B",
    "weapon": "AK-205",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 35,
    "redsecTtkMs": 840,
    "roleFit": 80,
    "score": 61,
    "tier": "C",
    "weapon": "LMR 27",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 36,
    "redsecTtkMs": 1017,
    "roleFit": 78,
    "score": 60,
    "tier": "C",
    "weapon": "UMG-40",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 37,
    "redsecTtkMs": 855,
    "roleFit": 80,
    "score": 58,
    "tier": "C",
    "weapon": "SVDM",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 38,
    "redsecTtkMs": 2397,
    "roleFit": 72,
    "score": 55,
    "tier": "C",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 39,
    "redsecTtkMs": 3207,
    "roleFit": 72,
    "score": 55,
    "tier": "C",
    "weapon": "SV-98",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 40,
    "redsecTtkMs": 2834,
    "roleFit": 72,
    "score": 53,
    "tier": "C",
    "weapon": "M2010 ESR",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 41,
    "redsecTtkMs": 3207,
    "roleFit": 72,
    "score": 53,
    "tier": "C",
    "weapon": "PSR",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 42,
    "redsecTtkMs": 1061,
    "roleFit": 34,
    "score": 53,
    "tier": "C",
    "weapon": "VZ. 61",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 43,
    "redsecTtkMs": 978,
    "roleFit": 80,
    "score": 52,
    "tier": "C",
    "weapon": "M39 EMR",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 44,
    "redsecTtkMs": 1035,
    "roleFit": 80,
    "score": 51,
    "tier": "C",
    "weapon": "GRT-CPS",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 45,
    "redsecTtkMs": 1239,
    "roleFit": 80,
    "score": 44,
    "tier": "D",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 46,
    "redsecTtkMs": 1488,
    "roleFit": 62,
    "score": 36,
    "tier": "D",
    "weapon": "18.5KS-K",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 47,
    "redsecTtkMs": 1920,
    "roleFit": 34,
    "score": 35,
    "tier": "D",
    "weapon": "M44",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 48,
    "redsecTtkMs": 1521,
    "roleFit": 34,
    "score": 31,
    "tier": "D",
    "weapon": "ES 5.7",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 49,
    "redsecTtkMs": 1600,
    "roleFit": 34,
    "score": 29,
    "tier": "D",
    "weapon": "P18",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 50,
    "redsecTtkMs": 1572,
    "roleFit": 34,
    "score": 28,
    "tier": "D",
    "weapon": "M45A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 51,
    "redsecTtkMs": 1754,
    "roleFit": 34,
    "score": 27,
    "tier": "D",
    "weapon": "GGH-22",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 52,
    "redsecTtkMs": 1685,
    "roleFit": 34,
    "score": 27,
    "tier": "D",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 53,
    "redsecTtkMs": 1588,
    "roleFit": 62,
    "score": 24,
    "tier": "D",
    "weapon": "M1014",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 54,
    "redsecTtkMs": 2888,
    "roleFit": 62,
    "score": 22,
    "tier": "D",
    "weapon": "DB-12",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 55,
    "redsecTtkMs": 2641,
    "roleFit": 62,
    "score": 20,
    "tier": "D",
    "weapon": "M87A1",
  },
]
`;

exports[`metaEngine ranking snapshots > keeps the complete assault ranking stable 1`] = `
[
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 1,
    "redsecTtkMs": 656,
    "roleFit": 86,
    "score": 84,
    "tier": "S",
    "weapon": "KV9",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 2,
    "redsecTtkMs": 596,
    "roleFit": 96,
    "score": 82,
    "tier": "S",
    "weapon": "VCR-2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 3,
    "redsecTtkMs": 637,
    "roleFit": 96,
    "score": 82,
    "tier": "S",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 4,
    "redsecTtkMs": 631,
    "roleFit": 96,
    "score": 81,
    "tier": "S",
    "weapon": "M433",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 5,
    "redsecTtkMs": 682,
    "roleFit": 86,
    "score": 81,
    "tier": "S",
    "weapon": "SCW-10",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 6,
    "redsecTtkMs": 709,
    "roleFit": 86,
    "score": 81,
    "tier": "S",
    "weapon": "CZ3A1",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 7,
    "redsecTtkMs": 713,
    "roleFit": 96,
    "score": 80,
    "tier": "S",
    "weapon": "KORD 6P67",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 8,
    "redsecTtkMs": 712,
    "roleFit": 96,
    "score": 79,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 9,
    "redsecTtkMs": 639,
    "roleFit": 88,
    "score": 78,
    "tier": "A",
    "weapon": "M277",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 10,
    "redsecTtkMs": 810,
    "roleFit": 86,
    "score": 78,
    "tier": "A",
    "weapon": "SGX",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 11,
    "redsecTtkMs": 819,
    "roleFit": 86,
    "score": 78,
    "tier": "A",
    "weapon": "PW7A2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 12,
    "redsecTtkMs": 866,
    "roleFit": 96,
    "score": 77,
    "tier": "A",
    "weapon": "AK4D",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 13,
    "redsecTtkMs": 734,
    "roleFit": 88,
    "score": 77,
    "tier": "A",
    "weapon": "SG-553R",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 14,
    "redsecTtkMs": 736,
    "roleFit": 88,
    "score": 77,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 15,
    "redsecTtkMs": 799,
    "roleFit": 96,
    "score": 76,
    "tier": "A",
    "weapon": "L85A3",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 16,
    "redsecTtkMs": 786,
    "roleFit": 96,
    "score": 76,
    "tier": "A",
    "weapon": "NVO-228E",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 17,
    "redsecTtkMs": 781,
    "roleFit": 88,
    "score": 76,
    "tier": "A",
    "weapon": "GRT-BC",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 18,
    "redsecTtkMs": 792,
    "roleFit": 88,
    "score": 76,
    "tier": "A",
    "weapon": "M417 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 19,
    "redsecTtkMs": 859,
    "roleFit": 86,
    "score": 76,
    "tier": "A",
    "weapon": "PW5A3",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 20,
    "redsecTtkMs": 795,
    "roleFit": 86,
    "score": 76,
    "tier": "A",
    "weapon": "USG-90",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 21,
    "redsecTtkMs": 958,
    "roleFit": 86,
    "score": 75,
    "tier": "A",
    "weapon": "SL9",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 22,
    "redsecTtkMs": 833,
    "roleFit": 88,
    "score": 74,
    "tier": "A",
    "weapon": "QBZ-192",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 23,
    "redsecTtkMs": 889,
    "roleFit": 96,
    "score": 73,
    "tier": "A",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 24,
    "redsecTtkMs": 862,
    "roleFit": 88,
    "score": 73,
    "tier": "A",
    "weapon": "SOR-300C",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 25,
    "redsecTtkMs": 1017,
    "roleFit": 86,
    "score": 71,
    "tier": "B",
    "weapon": "UMG-40",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 26,
    "redsecTtkMs": 964,
    "roleFit": 88,
    "score": 70,
    "tier": "B",
    "weapon": "AK-205",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 27,
    "redsecTtkMs": 671,
    "roleFit": 58,
    "score": 66,
    "tier": "B",
    "weapon": "DRS-IAR",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 28,
    "redsecTtkMs": 644,
    "roleFit": 58,
    "score": 66,
    "tier": "B",
    "weapon": "M123K",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 29,
    "redsecTtkMs": 715,
    "roleFit": 58,
    "score": 66,
    "tier": "B",
    "weapon": "M121 A2",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 30,
    "redsecTtkMs": 756,
    "roleFit": 58,
    "score": 62,
    "tier": "B",
    "weapon": "M240L",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 31,
    "redsecTtkMs": 712,
    "roleFit": 58,
    "score": 61,
    "tier": "C",
    "weapon": "L110",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 32,
    "redsecTtkMs": 866,
    "roleFit": 58,
    "score": 60,
    "tier": "C",
    "weapon": "M/60",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 33,
    "redsecTtkMs": 668,
    "roleFit": 58,
    "score": 59,
    "tier": "C",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 34,
    "redsecTtkMs": 967,
    "roleFit": 58,
    "score": 58,
    "tier": "C",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 35,
    "redsecTtkMs": 910,
    "roleFit": 58,
    "score": 58,
    "tier": "C",
    "weapon": "RPKM",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 36,
    "redsecTtkMs": 840,
    "roleFit": 56,
    "score": 57,
    "tier": "C",
    "weapon": "LMR 27",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 37,
    "redsecTtkMs": 2397,
    "roleFit": 42,
    "score": 56,
    "tier": "C",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 38,
    "redsecTtkMs": 1488,
    "roleFit": 76,
    "score": 55,
    "tier": "C",
    "weapon": "18.5KS-K",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 39,
    "redsecTtkMs": 855,
    "roleFit": 56,
    "score": 53,
    "tier": "C",
    "weapon": "SVDM",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 40,
    "redsecTtkMs": 3207,
    "roleFit": 42,
    "score": 53,
    "tier": "C",
    "weapon": "SV-98",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 41,
    "redsecTtkMs": 2834,
    "roleFit": 42,
    "score": 52,
    "tier": "C",
    "weapon": "M2010 ESR",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 42,
    "redsecTtkMs": 1061,
    "roleFit": 30,
    "score": 52,
    "tier": "C",
    "weapon": "VZ. 61",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 43,
    "redsecTtkMs": 1035,
    "roleFit": 56,
    "score": 49,
    "tier": "D",
    "weapon": "GRT-CPS",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 44,
    "redsecTtkMs": 3207,
    "roleFit": 42,
    "score": 49,
    "tier": "D",
    "weapon": "PSR",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 45,
    "redsecTtkMs": 978,
    "roleFit": 56,
    "score": 47,
    "tier": "D",
    "weapon": "M39 EMR",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 46,
    "redsecTtkMs": 1239,
    "roleFit": 56,
    "score": 44,
    "tier": "D",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 47,
    "redsecTtkMs": 1920,
    "roleFit": 30,
    "score": 44,
    "tier": "D",
    "weapon": "M44",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 48,
    "redsecTtkMs": 2888,
    "roleFit": 76,
    "score": 41,
    "tier": "D",
    "weapon": "DB-12",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 49,
    "redsecTtkMs": 1588,
    "roleFit": 76,
    "score": 40,
    "tier": "D",
    "weapon": "M1014",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 50,
    "redsecTtkMs": 2641,
    "roleFit": 76,
    "score": 37,
    "tier": "D",
    "weapon": "M87A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 51,
    "redsecTtkMs": 1572,
    "roleFit": 30,
    "score": 36,
    "tier": "D",
    "weapon": "M45A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 52,
    "redsecTtkMs": 1521,
    "roleFit": 30,
    "score": 36,
    "tier": "D",
    "weapon": "ES 5.7",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 53,
    "redsecTtkMs": 1685,
    "roleFit": 30,
    "score": 36,
    "tier": "D",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 54,
    "redsecTtkMs": 1600,
    "roleFit": 30,
    "score": 35,
    "tier": "D",
    "weapon": "P18",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 55,
    "redsecTtkMs": 1754,
    "roleFit": 30,
    "score": 34,
    "tier": "D",
    "weapon": "GGH-22",
  },
]
`;

exports[`metaEngine ranking snapshots > keeps the complete engineer ranking stable 1`] = `
[
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 1,
    "redsecTtkMs": 656,
    "roleFit": 90,
    "score": 85,
    "tier": "S",
    "weapon": "KV9",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 2,
    "redsecTtkMs": 709,
    "roleFit": 90,
    "score": 83,
    "tier": "S",
    "weapon": "CZ3A1",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 3,
    "redsecTtkMs": 682,
    "roleFit": 90,
    "score": 82,
    "tier": "S",
    "weapon": "SCW-10",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 4,
    "redsecTtkMs": 639,
    "roleFit": 95,
    "score": 80,
    "tier": "S",
    "weapon": "M277",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 5,
    "redsecTtkMs": 810,
    "roleFit": 90,
    "score": 80,
    "tier": "S",
    "weapon": "SGX",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 6,
    "redsecTtkMs": 819,
    "roleFit": 90,
    "score": 80,
    "tier": "S",
    "weapon": "PW7A2",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 7,
    "redsecTtkMs": 734,
    "roleFit": 95,
    "score": 79,
    "tier": "A",
    "weapon": "SG-553R",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 8,
    "redsecTtkMs": 736,
    "roleFit": 95,
    "score": 79,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 9,
    "redsecTtkMs": 781,
    "roleFit": 95,
    "score": 79,
    "tier": "A",
    "weapon": "GRT-BC",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 10,
    "redsecTtkMs": 859,
    "roleFit": 90,
    "score": 79,
    "tier": "A",
    "weapon": "PW5A3",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 11,
    "redsecTtkMs": 795,
    "roleFit": 90,
    "score": 79,
    "tier": "A",
    "weapon": "USG-90",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 12,
    "redsecTtkMs": 792,
    "roleFit": 95,
    "score": 78,
    "tier": "A",
    "weapon": "M417 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 13,
    "redsecTtkMs": 958,
    "roleFit": 90,
    "score": 78,
    "tier": "A",
    "weapon": "SL9",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 14,
    "redsecTtkMs": 833,
    "roleFit": 95,
    "score": 77,
    "tier": "A",
    "weapon": "QBZ-192",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 15,
    "redsecTtkMs": 862,
    "roleFit": 95,
    "score": 76,
    "tier": "A",
    "weapon": "SOR-300C",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 16,
    "redsecTtkMs": 596,
    "roleFit": 76,
    "score": 76,
    "tier": "A",
    "weapon": "VCR-2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 17,
    "redsecTtkMs": 1017,
    "roleFit": 90,
    "score": 75,
    "tier": "A",
    "weapon": "UMG-40",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 18,
    "redsecTtkMs": 637,
    "roleFit": 76,
    "score": 75,
    "tier": "A",
    "weapon": "TR-7",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 19,
    "redsecTtkMs": 964,
    "roleFit": 95,
    "score": 74,
    "tier": "A",
    "weapon": "AK-205",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 20,
    "redsecTtkMs": 713,
    "roleFit": 76,
    "score": 74,
    "tier": "A",
    "weapon": "KORD 6P67",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 21,
    "redsecTtkMs": 631,
    "roleFit": 76,
    "score": 74,
    "tier": "A",
    "weapon": "M433",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 22,
    "redsecTtkMs": 712,
    "roleFit": 76,
    "score": 73,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 23,
    "redsecTtkMs": 786,
    "roleFit": 76,
    "score": 71,
    "tier": "B",
    "weapon": "NVO-228E",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 24,
    "redsecTtkMs": 799,
    "roleFit": 76,
    "score": 70,
    "tier": "B",
    "weapon": "L85A3",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 25,
    "redsecTtkMs": 866,
    "roleFit": 76,
    "score": 70,
    "tier": "B",
    "weapon": "AK4D",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 26,
    "redsecTtkMs": 889,
    "roleFit": 76,
    "score": 68,
    "tier": "B",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 27,
    "redsecTtkMs": 671,
    "roleFit": 60,
    "score": 64,
    "tier": "B",
    "weapon": "DRS-IAR",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 28,
    "redsecTtkMs": 644,
    "roleFit": 60,
    "score": 63,
    "tier": "B",
    "weapon": "M123K",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 29,
    "redsecTtkMs": 715,
    "roleFit": 60,
    "score": 63,
    "tier": "B",
    "weapon": "M121 A2",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 30,
    "redsecTtkMs": 840,
    "roleFit": 66,
    "score": 61,
    "tier": "C",
    "weapon": "LMR 27",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 31,
    "redsecTtkMs": 712,
    "roleFit": 60,
    "score": 59,
    "tier": "C",
    "weapon": "L110",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 32,
    "redsecTtkMs": 756,
    "roleFit": 60,
    "score": 59,
    "tier": "C",
    "weapon": "M240L",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 33,
    "redsecTtkMs": 1488,
    "roleFit": 78,
    "score": 58,
    "tier": "C",
    "weapon": "18.5KS-K",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 34,
    "redsecTtkMs": 967,
    "roleFit": 60,
    "score": 58,
    "tier": "C",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 35,
    "redsecTtkMs": 668,
    "roleFit": 60,
    "score": 57,
    "tier": "C",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 36,
    "redsecTtkMs": 910,
    "roleFit": 60,
    "score": 57,
    "tier": "C",
    "weapon": "RPKM",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 37,
    "redsecTtkMs": 866,
    "roleFit": 60,
    "score": 57,
    "tier": "C",
    "weapon": "M/60",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 38,
    "redsecTtkMs": 855,
    "roleFit": 66,
    "score": 56,
    "tier": "C",
    "weapon": "SVDM",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 39,
    "redsecTtkMs": 1035,
    "roleFit": 66,
    "score": 54,
    "tier": "C",
    "weapon": "GRT-CPS",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 40,
    "redsecTtkMs": 1061,
    "roleFit": 28,
    "score": 54,
    "tier": "C",
    "weapon": "VZ. 61",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 41,
    "redsecTtkMs": 2397,
    "roleFit": 46,
    "score": 53,
    "tier": "C",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 42,
    "redsecTtkMs": 978,
    "roleFit": 66,
    "score": 52,
    "tier": "C",
    "weapon": "M39 EMR",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 43,
    "redsecTtkMs": 3207,
    "roleFit": 46,
    "score": 51,
    "tier": "C",
    "weapon": "SV-98",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 44,
    "redsecTtkMs": 2834,
    "roleFit": 46,
    "score": 49,
    "tier": "D",
    "weapon": "M2010 ESR",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 45,
    "redsecTtkMs": 2888,
    "roleFit": 78,
    "score": 48,
    "tier": "D",
    "weapon": "DB-12",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 46,
    "redsecTtkMs": 1239,
    "roleFit": 66,
    "score": 46,
    "tier": "D",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 47,
    "redsecTtkMs": 3207,
    "roleFit": 46,
    "score": 46,
    "tier": "D",
    "weapon": "PSR",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 48,
    "redsecTtkMs": 1588,
    "roleFit": 78,
    "score": 45,
    "tier": "D",
    "weapon": "M1014",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 49,
    "redsecTtkMs": 1920,
    "roleFit": 28,
    "score": 43,
    "tier": "D",
    "weapon": "M44",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 50,
    "redsecTtkMs": 2641,
    "roleFit": 78,
    "score": 42,
    "tier": "D",
    "weapon": "M87A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 51,
    "redsecTtkMs": 1521,
    "roleFit": 28,
    "score": 41,
    "tier": "D",
    "weapon": "ES 5.7",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 52,
    "redsecTtkMs": 1572,
    "roleFit": 28,
    "score": 40,
    "tier": "D",
    "weapon": "M45A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 53,
    "redsecTtkMs": 1600,
    "roleFit": 28,
    "score": 39,
    "tier": "D",
    "weapon": "P18",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 54,
    "redsecTtkMs": 1685,
    "roleFit": 28,
    "score": 39,
    "tier": "D",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 55,
    "redsecTtkMs": 1754,
    "roleFit": 28,
    "score": 38,
    "tier": "D",
    "weapon": "GGH-22",
  },
]
`;

exports[`metaEngine ranking snapshots > keeps the complete recon ranking stable 1`] = `
[
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 1,
    "redsecTtkMs": 840,
    "roleFit": 100,
    "score": 81,
    "tier": "S",
    "weapon": "LMR 27",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 2,
    "redsecTtkMs": 3207,
    "roleFit": 98,
    "score": 80,
    "tier": "S",
    "weapon": "SV-98",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 3,
    "redsecTtkMs": 2834,
    "roleFit": 98,
    "score": 79,
    "tier": "A",
    "weapon": "M2010 ESR",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 4,
    "redsecTtkMs": 2397,
    "roleFit": 98,
    "score": 79,
    "tier": "A",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 5,
    "redsecTtkMs": 3207,
    "roleFit": 98,
    "score": 79,
    "tier": "A",
    "weapon": "PSR",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 6,
    "redsecTtkMs": 855,
    "roleFit": 100,
    "score": 78,
    "tier": "A",
    "weapon": "SVDM",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 7,
    "redsecTtkMs": 1035,
    "roleFit": 100,
    "score": 77,
    "tier": "A",
    "weapon": "GRT-CPS",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 8,
    "redsecTtkMs": 978,
    "roleFit": 100,
    "score": 75,
    "tier": "A",
    "weapon": "M39 EMR",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 9,
    "redsecTtkMs": 1239,
    "roleFit": 100,
    "score": 69,
    "tier": "B",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 10,
    "redsecTtkMs": 639,
    "roleFit": 55,
    "score": 68,
    "tier": "B",
    "weapon": "M277",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 11,
    "redsecTtkMs": 713,
    "roleFit": 45,
    "score": 66,
    "tier": "B",
    "weapon": "KORD 6P67",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 12,
    "redsecTtkMs": 668,
    "roleFit": 44,
    "score": 66,
    "tier": "B",
    "weapon": "M250",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 13,
    "redsecTtkMs": 736,
    "roleFit": 55,
    "score": 65,
    "tier": "B",
    "weapon": "M4A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 14,
    "redsecTtkMs": 781,
    "roleFit": 55,
    "score": 65,
    "tier": "B",
    "weapon": "GRT-BC",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 15,
    "redsecTtkMs": 596,
    "roleFit": 45,
    "score": 65,
    "tier": "B",
    "weapon": "VCR-2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 16,
    "redsecTtkMs": 631,
    "roleFit": 45,
    "score": 65,
    "tier": "B",
    "weapon": "M433",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 17,
    "redsecTtkMs": 671,
    "roleFit": 44,
    "score": 65,
    "tier": "B",
    "weapon": "DRS-IAR",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 18,
    "redsecTtkMs": 712,
    "roleFit": 44,
    "score": 65,
    "tier": "B",
    "weapon": "L110",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 19,
    "redsecTtkMs": 964,
    "roleFit": 55,
    "score": 64,
    "tier": "B",
    "weapon": "AK-205",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 20,
    "redsecTtkMs": 833,
    "roleFit": 55,
    "score": 64,
    "tier": "B",
    "weapon": "QBZ-192",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 21,
    "redsecTtkMs": 712,
    "roleFit": 45,
    "score": 64,
    "tier": "B",
    "weapon": "B36A4",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 22,
    "redsecTtkMs": 967,
    "roleFit": 44,
    "score": 64,
    "tier": "B",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 23,
    "redsecTtkMs": 644,
    "roleFit": 44,
    "score": 64,
    "tier": "B",
    "weapon": "M123K",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 24,
    "redsecTtkMs": 792,
    "roleFit": 55,
    "score": 63,
    "tier": "B",
    "weapon": "M417 A2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 25,
    "redsecTtkMs": 637,
    "roleFit": 45,
    "score": 63,
    "tier": "B",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 26,
    "redsecTtkMs": 799,
    "roleFit": 45,
    "score": 63,
    "tier": "B",
    "weapon": "L85A3",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 27,
    "redsecTtkMs": 734,
    "roleFit": 55,
    "score": 62,
    "tier": "B",
    "weapon": "SG-553R",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 28,
    "redsecTtkMs": 866,
    "roleFit": 44,
    "score": 62,
    "tier": "B",
    "weapon": "M/60",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 29,
    "redsecTtkMs": 715,
    "roleFit": 44,
    "score": 62,
    "tier": "B",
    "weapon": "M121 A2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 30,
    "redsecTtkMs": 889,
    "roleFit": 45,
    "score": 61,
    "tier": "C",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 31,
    "redsecTtkMs": 786,
    "roleFit": 45,
    "score": 61,
    "tier": "C",
    "weapon": "NVO-228E",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 32,
    "redsecTtkMs": 756,
    "roleFit": 44,
    "score": 61,
    "tier": "C",
    "weapon": "M240L",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 33,
    "redsecTtkMs": 862,
    "roleFit": 55,
    "score": 60,
    "tier": "C",
    "weapon": "SOR-300C",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 34,
    "redsecTtkMs": 866,
    "roleFit": 45,
    "score": 60,
    "tier": "C",
    "weapon": "AK4D",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 35,
    "redsecTtkMs": 910,
    "roleFit": 44,
    "score": 60,
    "tier": "C",
    "weapon": "RPKM",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 36,
    "redsecTtkMs": 819,
    "roleFit": 34,
    "score": 59,
    "tier": "C",
    "weapon": "PW7A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 37,
    "redsecTtkMs": 656,
    "roleFit": 34,
    "score": 58,
    "tier": "C",
    "weapon": "KV9",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 38,
    "redsecTtkMs": 795,
    "roleFit": 34,
    "score": 57,
    "tier": "C",
    "weapon": "USG-90",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 39,
    "redsecTtkMs": 682,
    "roleFit": 34,
    "score": 56,
    "tier": "C",
    "weapon": "SCW-10",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 40,
    "redsecTtkMs": 709,
    "roleFit": 34,
    "score": 56,
    "tier": "C",
    "weapon": "CZ3A1",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 41,
    "redsecTtkMs": 810,
    "roleFit": 34,
    "score": 55,
    "tier": "C",
    "weapon": "SGX",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 42,
    "redsecTtkMs": 859,
    "roleFit": 34,
    "score": 54,
    "tier": "C",
    "weapon": "PW5A3",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 43,
    "redsecTtkMs": 958,
    "roleFit": 34,
    "score": 54,
    "tier": "C",
    "weapon": "SL9",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 44,
    "redsecTtkMs": 1017,
    "roleFit": 34,
    "score": 53,
    "tier": "C",
    "weapon": "UMG-40",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 45,
    "redsecTtkMs": 1061,
    "roleFit": 34,
    "score": 50,
    "tier": "C",
    "weapon": "VZ. 61",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 46,
    "redsecTtkMs": 1521,
    "roleFit": 34,
    "score": 38,
    "tier": "D",
    "weapon": "ES 5.7",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 47,
    "redsecTtkMs": 1488,
    "roleFit": 46,
    "score": 37,
    "tier": "D",
    "weapon": "18.5KS-K",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 48,
    "redsecTtkMs": 1600,
    "roleFit": 34,
    "score": 35,
    "tier": "D",
    "weapon": "P18",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 49,
    "redsecTtkMs": 1754,
    "roleFit": 34,
    "score": 34,
    "tier": "D",
    "weapon": "GGH-22",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 50,
    "redsecTtkMs": 1588,
    "roleFit": 46,
    "score": 33,
    "tier": "D",
    "weapon": "M1014",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 51,
    "redsecTtkMs": 2888,
    "roleFit": 46,
    "score": 33,
    "tier": "D",
    "weapon": "DB-12",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 52,
    "redsecTtkMs": 1572,
    "roleFit": 34,
    "score": 33,
    "tier": "D",
    "weapon": "M45A1",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 53,
    "redsecTtkMs": 1920,
    "roleFit": 34,
    "score": 33,
    "tier": "D",
    "weapon": "M44",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 54,
    "redsecTtkMs": 1685,
    "roleFit": 34,
    "score": 32,
    "tier": "D",
    "weapon": "M357 TRAIT",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 55,
    "redsecTtkMs": 2641,
    "roleFit": 46,
    "score": 30,
    "tier": "D",
    "weapon": "M87A1",
  },
]
`;

exports[`metaEngine ranking snapshots > keeps the complete support ranking stable 1`] = `
[
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 1,
    "redsecTtkMs": 712,
    "roleFit": 97,
    "score": 79,
    "tier": "A",
    "weapon": "L110",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 254,
    "rank": 2,
    "redsecTtkMs": 644,
    "roleFit": 97,
    "score": 79,
    "tier": "A",
    "weapon": "M123K",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 3,
    "redsecTtkMs": 713,
    "roleFit": 84,
    "score": 79,
    "tier": "A",
    "weapon": "KORD 6P67",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 236,
    "rank": 4,
    "redsecTtkMs": 596,
    "roleFit": 84,
    "score": 79,
    "tier": "A",
    "weapon": "VCR-2",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 5,
    "redsecTtkMs": 671,
    "roleFit": 97,
    "score": 78,
    "tier": "A",
    "weapon": "DRS-IAR",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 247,
    "rank": 6,
    "redsecTtkMs": 631,
    "roleFit": 84,
    "score": 78,
    "tier": "A",
    "weapon": "M433",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 276,
    "rank": 7,
    "redsecTtkMs": 712,
    "roleFit": 84,
    "score": 77,
    "tier": "A",
    "weapon": "B36A4",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 369,
    "rank": 8,
    "redsecTtkMs": 967,
    "roleFit": 97,
    "score": 76,
    "tier": "A",
    "weapon": "KTS100 MK8",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 293,
    "rank": 9,
    "redsecTtkMs": 668,
    "roleFit": 97,
    "score": 76,
    "tier": "A",
    "weapon": "M250",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 10,
    "redsecTtkMs": 866,
    "roleFit": 97,
    "score": 75,
    "tier": "A",
    "weapon": "M/60",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 232,
    "rank": 11,
    "redsecTtkMs": 756,
    "roleFit": 97,
    "score": 75,
    "tier": "A",
    "weapon": "M240L",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 198,
    "rank": 12,
    "redsecTtkMs": 637,
    "roleFit": 84,
    "score": 75,
    "tier": "A",
    "weapon": "TR-7",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 308,
    "rank": 13,
    "redsecTtkMs": 799,
    "roleFit": 84,
    "score": 75,
    "tier": "A",
    "weapon": "L85A3",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 305,
    "rank": 14,
    "redsecTtkMs": 786,
    "roleFit": 84,
    "score": 74,
    "tier": "A",
    "weapon": "NVO-228E",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 306,
    "rank": 15,
    "redsecTtkMs": 736,
    "roleFit": 78,
    "score": 74,
    "tier": "A",
    "weapon": "M4A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 282,
    "rank": 16,
    "redsecTtkMs": 639,
    "roleFit": 78,
    "score": 74,
    "tier": "A",
    "weapon": "M277",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 368,
    "rank": 17,
    "redsecTtkMs": 795,
    "roleFit": 70,
    "score": 74,
    "tier": "A",
    "weapon": "USG-90",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 349,
    "rank": 18,
    "redsecTtkMs": 910,
    "roleFit": 97,
    "score": 73,
    "tier": "A",
    "weapon": "RPKM",
  },
  {
    "className": "LMG",
    "dataQuality": 100,
    "mpTtkMs": 225,
    "rank": 19,
    "redsecTtkMs": 715,
    "roleFit": 97,
    "score": 73,
    "tier": "A",
    "weapon": "M121 A2",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 20,
    "redsecTtkMs": 889,
    "roleFit": 84,
    "score": 73,
    "tier": "A",
    "weapon": "SOR-556 Mk2",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 323,
    "rank": 21,
    "redsecTtkMs": 781,
    "roleFit": 78,
    "score": 73,
    "tier": "A",
    "weapon": "GRT-BC",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 350,
    "rank": 22,
    "redsecTtkMs": 819,
    "roleFit": 70,
    "score": 73,
    "tier": "A",
    "weapon": "PW7A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 300,
    "rank": 23,
    "redsecTtkMs": 709,
    "roleFit": 70,
    "score": 73,
    "tier": "A",
    "weapon": "CZ3A1",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 342,
    "rank": 24,
    "redsecTtkMs": 833,
    "roleFit": 78,
    "score": 72,
    "tier": "A",
    "weapon": "QBZ-192",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 280,
    "rank": 25,
    "redsecTtkMs": 656,
    "roleFit": 70,
    "score": 72,
    "tier": "A",
    "weapon": "KV9",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 444,
    "rank": 26,
    "redsecTtkMs": 964,
    "roleFit": 78,
    "score": 71,
    "tier": "B",
    "weapon": "AK-205",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 289,
    "rank": 27,
    "redsecTtkMs": 734,
    "roleFit": 78,
    "score": 71,
    "tier": "B",
    "weapon": "SG-553R",
  },
  {
    "className": "Assault Rifle",
    "dataQuality": 100,
    "mpTtkMs": 261,
    "rank": 28,
    "redsecTtkMs": 866,
    "roleFit": 84,
    "score": 70,
    "tier": "B",
    "weapon": "AK4D",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 309,
    "rank": 29,
    "redsecTtkMs": 792,
    "roleFit": 78,
    "score": 70,
    "tier": "B",
    "weapon": "M417 A2",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 339,
    "rank": 30,
    "redsecTtkMs": 810,
    "roleFit": 70,
    "score": 70,
    "tier": "B",
    "weapon": "SGX",
  },
  {
    "className": "Carbine",
    "dataQuality": 100,
    "mpTtkMs": 336,
    "rank": 31,
    "redsecTtkMs": 862,
    "roleFit": 78,
    "score": 69,
    "tier": "B",
    "weapon": "SOR-300C",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 272,
    "rank": 32,
    "redsecTtkMs": 682,
    "roleFit": 70,
    "score": 69,
    "tier": "B",
    "weapon": "SCW-10",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 358,
    "rank": 33,
    "redsecTtkMs": 859,
    "roleFit": 70,
    "score": 69,
    "tier": "B",
    "weapon": "PW5A3",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 395,
    "rank": 34,
    "redsecTtkMs": 958,
    "roleFit": 70,
    "score": 68,
    "tier": "B",
    "weapon": "SL9",
  },
  {
    "className": "SMG",
    "dataQuality": 100,
    "mpTtkMs": 419,
    "rank": 35,
    "redsecTtkMs": 1017,
    "roleFit": 70,
    "score": 66,
    "tier": "B",
    "weapon": "UMG-40",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 423,
    "rank": 36,
    "redsecTtkMs": 840,
    "roleFit": 72,
    "score": 65,
    "tier": "B",
    "weapon": "LMR 27",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 431,
    "rank": 37,
    "redsecTtkMs": 855,
    "roleFit": 72,
    "score": 63,
    "tier": "B",
    "weapon": "SVDM",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 492,
    "rank": 38,
    "redsecTtkMs": 978,
    "roleFit": 72,
    "score": 62,
    "tier": "B",
    "weapon": "M39 EMR",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 520,
    "rank": 39,
    "redsecTtkMs": 1035,
    "roleFit": 72,
    "score": 62,
    "tier": "B",
    "weapon": "GRT-CPS",
  },
  {
    "className": "DMR",
    "dataQuality": 100,
    "mpTtkMs": 422,
    "rank": 40,
    "redsecTtkMs": 1239,
    "roleFit": 72,
    "score": 53,
    "tier": "C",
    "weapon": "SVK-8.6",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 501,
    "rank": 41,
    "redsecTtkMs": 1061,
    "roleFit": 28,
    "score": 51,
    "tier": "C",
    "weapon": "VZ. 61",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1201,
    "rank": 42,
    "redsecTtkMs": 2397,
    "roleFit": 42,
    "score": 49,
    "tier": "D",
    "weapon": "MINI SCOUT",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 43,
    "redsecTtkMs": 3207,
    "roleFit": 42,
    "score": 49,
    "tier": "D",
    "weapon": "SV-98",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1607,
    "rank": 44,
    "redsecTtkMs": 3207,
    "roleFit": 42,
    "score": 47,
    "tier": "D",
    "weapon": "PSR",
  },
  {
    "className": "Sniper",
    "dataQuality": 100,
    "mpTtkMs": 1420,
    "rank": 45,
    "redsecTtkMs": 2834,
    "roleFit": 42,
    "score": 46,
    "tier": "D",
    "weapon": "M2010 ESR",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 450,
    "rank": 46,
    "redsecTtkMs": 1488,
    "roleFit": 48,
    "score": 41,
    "tier": "D",
    "weapon": "18.5KS-K",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 697,
    "rank": 47,
    "redsecTtkMs": 1521,
    "roleFit": 28,
    "score": 41,
    "tier": "D",
    "weapon": "ES 5.7",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 650,
    "rank": 48,
    "redsecTtkMs": 1588,
    "roleFit": 48,
    "score": 38,
    "tier": "D",
    "weapon": "M1014",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 657,
    "rank": 49,
    "redsecTtkMs": 1600,
    "roleFit": 28,
    "score": 38,
    "tier": "D",
    "weapon": "P18",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 850,
    "rank": 50,
    "redsecTtkMs": 2888,
    "roleFit": 48,
    "score": 37,
    "tier": "D",
    "weapon": "DB-12",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 717,
    "rank": 51,
    "redsecTtkMs": 1754,
    "roleFit": 28,
    "score": 37,
    "tier": "D",
    "weapon": "GGH-22",
  },
  {
    "className": "Shotgun",
    "dataQuality": 100,
    "mpTtkMs": 688,
    "rank": 52,
    "redsecTtkMs": 2641,
    "roleFit": 48,
    "score": 35,
    "tier": "D",
    "weapon": "M87A1",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 610,
    "rank": 53,
    "redsecTtkMs": 1572,
    "roleFit": 28,
    "score": 35,
    "tier": "D",
    "weapon": "M45A1",
  },
  {
    "className": "Revolver",
    "dataQuality": 100,
    "mpTtkMs": 414,
    "rank": 54,
    "redsecTtkMs": 1920,
    "roleFit": 28,
    "score": 33,
    "tier": "D",
    "weapon": "M44",
  },
  {
    "className": "Pistol",
    "dataQuality": 100,
    "mpTtkMs": 582,
    "rank": 55,
    "redsecTtkMs": 1685,
    "roleFit": 28,
    "score": 32,
    "tier": "D",
    "weapon": "M357 TRAIT",
  },
]
`;
